--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="outer_shell">
-        <div class="color_overlay">
-          <div class="switch"></div>
+      <div class="switch_wrapper">
+        <div class="status_wrapper">
+          <div class="switch_cta"></div>
         </div>
-      </div>
+      </div><span class="text">Off</span>
     </div>
     <script src="jquery.js"></script>
     <script src="app.js"></script>
